apply plugin: 'kotlin'

group = 'org.greenrobot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
    implementation 'org.greenrobot:greendao-api:3.3.0'
    implementation 'org.greenrobot:greendao-generator:3.3.0'
    implementation 'org.greenrobot:greenrobot-jdt:3.20.0'
    implementation 'org.greenrobot:essentials:3.0.0-RC1'

    testImplementation 'junit:junit:4.12'
    testImplementation 'org.mockito:mockito-all:1.10.19'
    testImplementation 'com.natpryce:hamkrest:1.1.0.0'
}

tasks.withType(Test).configureEach {
    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED',
            '--add-opens=java.base/java.io=ALL-UNNAMED',
            '--add-opens=java.desktop/java.beans=ALL-UNNAMED'
}

apply from: rootProject.file("gradle/publish.gradle")
